# kanban_backend

./: .gitignore  LICENSE  README.rst  TestDockerfile  awscli-deployment.yaml  django-deployment.yaml  envs--production--django-configmap.yaml  envs--production--postgres-configmap.yaml  local.yml  manage.py  postgres-deployment.yaml  production-postgres-data-backups-persistentvolumeclaim.yaml  production-postgres-data-persistentvolumeclaim.yaml  production-traefik-persistentvolumeclaim.yaml  production.yml  pyproject.toml  redis-deployment.yaml  setup.cfg  traefik-deployment.yaml  traefik-service.yaml
.envs/.local/: .postgres
compose/production/traefik/: traefik.yml
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
docs/pycharm/: configuration.rst
kanban_backend/: conftest.py
kanban_backend/base/: BaseModel.py  BaseSerializers.py  exceptions.py
kanban_backend/project_management/: apps.py  models.py  permissions.py  urls.py  views.py
kanban_backend/project_management/migrations/: 0001_initial.py  0002_auto_20220103_2126.py  0003_auto_20220103_2155.py  0004_auto_20220112_1134.py
kanban_backend/project_management/serializers/: ProjectSerializers.py  SprintSerializers.py  TaskSerializers.py
kanban_backend/templates/: base.html
kanban_backend/users/: admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
kanban_backend/users/migrations/: 0002_auto_20220101_1844.py  0003_projectowner_company.py
requirements/: base.txt
(+8 files in other folders)
