[tool.poetry]
name = "kanban_backend"
version = "0.1.0"
description = ""
authors = ["Bazmahou <bouissihamza6@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.9"
requests = "^2.23.0"
Django = "^4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
